force-app/main/default/objects/Application__c/fields/Candidate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Phone_Number__c</fullName>
    <formula>Candidate__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Phone Number</label>
    <type>Text</type>
</CustomField>