force-app/main/default/objects/Application__c/fields/Is_Referred_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Is_Referred_Candidate__c</fullName>
    <formula>ISPICKVAL( Source__c , &quot;Referral&quot;) &amp;&amp; NOT(ISBLANK( Referred_By__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Referred Candidate</label>
    <type>Checkbox</type>
</CustomField>