force-app/main/default/objects/Application__c/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <label>Job Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Application</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>