force-app/main/default/objects/Application__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>