force-app/main/default/objects/Application__c/fields/unique_Application_Code__c.field-meta.xml
<CustomField>
    <fullName>unique_Application_Code__c</fullName>
    <formula>TEXT(YEAR(TODAY())) &amp; &quot;-&quot; &amp;
CASE(MONTH(TODAY()),
     1, &quot;Jan&quot;,
     2, &quot;Feb&quot;,
     3, &quot;Mar&quot;,
     4, &quot;Apr&quot;,
     5, &quot;May&quot;,
     6, &quot;Jun&quot;,
     7, &quot;Jul&quot;,
     8, &quot;Aug&quot;,
     9, &quot;Sep&quot;,
     10, &quot;Oct&quot;,
     11, &quot;Nov&quot;,
     12, &quot;Dec&quot;,
     &quot;Unknown&quot;
) &amp; &quot;-&quot; &amp;
UPPER(LEFT( Candidate__r.Name , 1)) &amp;
UPPER(MID( Candidate__r.Name , FIND(&quot; &quot;,  Candidate__r.Name ) + 1, 1)) &amp; &quot;-&quot; &amp;
RIGHT( Candidate__r.Phone__c , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>unique Application Code</label>
    <type>Text</type>
</CustomField>