force-app/main/default/objects/Application__c/recordTypes/Experienced.recordType-meta.xml
<RecordType>
    <fullName>Experienced</fullName>
    <active>true</active>
    <label>Experienced</label>
</RecordType>