force-app/main/default/objects/Application__c/recordTypes/Fresher.recordType-meta.xml
<RecordType>
    <fullName>Fresher</fullName>
    <active>true</active>
    <description>For fresh graduate applications</description>
    <label>Fresher</label>
</RecordType>