force-app/main/default/objects/Application__c/validationRules/Application_Date_After_Job_Post.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Date_After_Job_Post</fullName>
    <active>true</active>
    <description>Application Date must be after Job Position creation date.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Application_Date__c)),
  Application_Date__c &lt;= DATEVALUE(Job_Position__r.CreatedDate)
)</errorConditionFormula>
    <errorMessage>Application Date must be after Job Position creation date.</errorMessage>
</ValidationRule>