force-app/main/default/objects/Application__c/validationRules/Application_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Date_Not_Future</fullName>
    <active>true</active>
    <description>Application Date must not be in the future.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Application_Date__c)),
  Application_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorMessage>Application Date must not be in the future.</errorMessage>
</ValidationRule>