force-app/main/default/objects/Application__c/validationRules/HR_Manager_is_not_Equal_to_the_Job_Posit.validationRule-meta.xml
<ValidationRule>
    <fullName>HR_Manager_is_not_Equal_to_the_Job_Posit</fullName>
    <active>true</active>
    <errorConditionFormula>HR_Manager__r.Id &lt;&gt;  Job_Position__r.Hiring_Manager__r.Id</errorConditionFormula>
    <errorMessage>Please Select the HR Manager of the Associate Job Position</errorMessage>
</ValidationRule>