force-app/main/default/objects/Application__c/validationRules/Referred_By_If_Referral.validationRule-meta.xml
<ValidationRule>
    <fullName>Referred_By_If_Referral</fullName>
    <active>true</active>
    <description>If Source = Referral, then Referred By must be filled.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Source__c, &quot;Referral&quot;),
  ISBLANK(Referred_By__c)
)</errorConditionFormula>
    <errorMessage>If Source = Referral, then Referred By must be filled.</errorMessage>
</ValidationRule>