force-app/main/default/objects/Application__c/listViews/Applications_in_Progress.listView-meta.xml
<ListView>
    <fullName>Applications_in_Progress</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Selected</value>
    </filters>
    <label>Applications in Progress</label>
    <sharedTo>
        <role>HR_roles</role>
    </sharedTo>
</ListView>