force-app/main/default/objects/Application__c/listViews/Referred_Applications.listView-meta.xml
<ListView>
    <fullName>Referred_Applications</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Referral</value>
    </filters>
    <label>Referred  Applications</label>
    <sharedTo>
        <role>HR_Executive</role>
    </sharedTo>
</ListView>